<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="task">任务</string>
    <string name="task_detail">任务详情</string>
    <string name="task_progress">任务进度</string>
    <string name="item_list">物品清单</string>
    <string name="goods_name">物品名称</string>
    <string name="goods_name_hint">输入物品名称</string>
    <string name="goods_count">物品数量</string>
    <string name="goods_count_hint">输入物品数量</string>
    <string name="task_conclusion">任务结论</string>
    <string name="add_goods">添加物品</string>
    <string name="modify_goods">修改物品</string>
    <string name="task_data">图纸或资料</string>
    <string name="commit">提交</string>
    <string name="appoint">指派</string>
    <string name="improve">改进</string>
    <string name="improve_execution">改进执行</string>
    <string name="processing">进行中</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
</resources>