<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_15"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginEnd="@dimen/dp_15"
    android:layout_marginBottom="@dimen/dp_1"
    android:background="@drawable/corners_dp5_white"
    android:elevation="@dimen/dp_1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/tv_title"
        style="@style/style_font_black"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="标题" />

    <TextView
        android:id="@+id/tv_receipt"
        style="@style/style_font_gray"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="完成了" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/style_font_black"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_receipt"
        tools:text="李时珍" />


    <LinearLayout
        android:id="@+id/cl_manager_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_appoint"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/appoint" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_improve"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/improve"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/complete" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_20"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cl_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_improve_execution"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_20"
            android:text="@string/improve_execution"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_state"
            style="@style/style_common_btn_small"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/bg_white_border_blue_label_bg"
            android:textColor="@color/color_theme"
            android:text="@string/processing" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
